--- a/client/styles/NavBar.scss
+++ b/client/styles/NavBar.scss
@@ -1,9 +1,9 @@
 .header-logo {
-  @apply w-1/4 self-start;
+  @apply w-1/5 self-start;
 }
 
 .nav-link {
-  @apply mx-4;
+  @apply mx-4 transition duration-300 ease-in-out hover:scale-105 hover:opacity-85;
 }
 
 .active-link {
