--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,12 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Lato&family=Life+Savers&family=Poiret+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+// create colour variables for my brand using root css variables
+:root {
+  --primary: #000e57;
+}
+
 body {
   font-family: 'Raleway', sans-serif;
   font-optical-sizing: auto;
   font-weight: normal;
   text-align: justify;
+}
+p {
+  margin: 1.5rem 0 0 0;
+}
+// li {
+//   list-style-type: disc;
+// }
+.content-container {
+  // padding: 0rem 3rem;
+  padding: 0 20%;
+}
+
+.handwritten {
+  font-family: 'Caveat', cursive;
+  color: white;
+  text-align: center;
+  font-size: 3rem;
+}
+
+@media only screen and (max-width: 1350px) {
+  .content-container {
+    padding: 0 15%;
+  }
+}
+
+@media only screen and (max-width: 1023px) {
+  .content-container {
+    padding: 0 10%;
+  }
 }
