get navbar dynamic & accordian working

--- a/client/styles/NavBar.scss
+++ b/client/styles/NavBar.scss
@@ -16,60 +16,48 @@
 }
 
 .nav-bar {
-  @apply flex justify-between;
+  background-color: #fff;
+  z-index: 1;
+  @apply fixed flex justify-between;
 }
 
 .menu-container {
   @apply flex justify-between self-end;
 }
 
-.menu-btn {
-  z-index: 2;
-}
-
-// want to keep menu on the right but have the accordian options also come down from the right
-
 @media screen and (max-width: 690px) {
-  .nav-bar {
-    flex-direction: column;
-    align-items: center;
-    position: relative;
+  .header-logo {
+    @apply w-1/3;
   }
+  .nav-bar {
+    flex-direction: column; // displays menu below bar
+    top: 0;
+    overflow: hidden; // hides links when menu closed
+    transition: max-height 0.45s ease-out;
+  }
+
+  .nav-bar.open {
+    max-height: 400px;
+  }
+
   .nav-link {
     display: block;
   }
 
   .accordian {
-    position: relative;
-    top: 0;
-    right: 0;
-    width: 100%;
     background-color: #fff;
-    // transform: translateY(-250px); /* Initially scale the menu to 0 height */
-    transform-origin: top; /* Scale from the top */
-    // transition: transform 1s ease-in-out;
-    opacity: 0;
-    transition:
-      height 1s ease-in-out,
-      opacity 1s ease-in-out;
-    z-index: 1;
-    text-align: right;
-    height: 0px;
+    max-height: 0; // hides accordian
+    transition: max-height 0.55s ease-in-out;
+    @apply relative text-right;
   }
 
   .menu-btn {
     position: absolute;
-    top: 0;
+    top: 10px;
     right: 10px;
   }
 
   .accordian.open {
-    height: 100%; /* or a fixed height */
-    opacity: 1;
-    // transform: translateY(0px); /* Scale the menu to full height */
-    transition:
-      height 1s ease-in-out,
-      opacity 1s ease-in-out;
-    // transition: transform 1s ease-out;
+    max-height: 100%;
   }
 }
