remove unnecessary classes

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -20,13 +20,6 @@ p {
   margin: 1.5rem 0 0 0;
 }
 
-// .app-container {
-//   @apply space-y-4 pt-6;
-// }
-// li {
-//   list-style-type: disc;
-// }
-
 .content-container {
   padding: 0 20%;
 }
@@ -50,12 +43,6 @@ p {
   }
 }
 
-@media screen and (max-width: 690px) {
-  // .page-container {
-  //   position: relative;
-  //   top: 60px;
-  // }
-  // .app-container {
-  //   @apply space-y-2 pt-2;
-  // }
-}
+// @media screen and (max-width: 690px) {
+
+// }
