shadow navbar, fix slider

--- a/client/styles/NavBar.scss
+++ b/client/styles/NavBar.scss
@@ -16,9 +16,14 @@
 }
 
 .nav-bar {
-  background-color: #fff;
+  background-color: #ffffff;
   z-index: 1;
   top: 0;
+  // border-radius: 0 0 20px 0;
+  box-shadow:
+    rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  border-width: 1px;
   @apply fixed flex justify-between pb-2;
 }
 
