--- a/client/styles/NavBar.scss
+++ b/client/styles/NavBar.scss
@@ -31,6 +31,17 @@
   @apply flex justify-between self-end;
 }
 
+.nav-book-now {
+  border-radius: 20px;
+  border-width: 1px;
+  border-color: orange;
+  box-shadow:
+    rgba(17, 17, 26, 0.1) 0px 1px 0px,
+    rgba(17, 17, 26, 0.1) 0px 8px 24px,
+    rgba(17, 17, 26, 0.1) 0px 16px 48px;
+  padding: 0 0.5rem;
+}
+
 @media screen and (max-width: 690px) {
   .header-logo {
     @apply w-1/3;
