--- a/client/styles/NavBar.scss
+++ b/client/styles/NavBar.scss
@@ -34,7 +34,9 @@
 .nav-book-now {
   border-radius: 20px;
   border-width: 1px;
-  border-color: orange;
+  border-color: #ff7b00;
+  background-color: #ff5e00;
+  color: #fff;
   box-shadow:
     rgba(17, 17, 26, 0.1) 0px 1px 0px,
     rgba(17, 17, 26, 0.1) 0px 8px 24px,
@@ -64,7 +66,7 @@
     background-color: #fff;
     max-height: 0; // hides accordian
     transition: max-height 0.55s ease-in-out;
-    @apply relative text-right;
+    @apply relative mt-2 text-right;
   }
 
   .menu-btn {
@@ -75,5 +77,22 @@
 
   .accordian.open {
     max-height: 100%;
+  }
+
+  .nav-book-now {
+    all: unset;
+    // color: #ff5100;
+    text-decoration-color: #ff5100;
+    @apply mx-4  underline;
+    // border-color: #ff7b00;
+    // border-radius: 20px;
+    // border-width: 1px;
+    // background-color: #ff5e00;
+    // color: #fff;
+    // box-shadow:
+    //   rgba(17, 17, 26, 0.1) 0px 1px 0px,
+    //   rgba(17, 17, 26, 0.1) 0px 8px 24px,
+    //   rgba(17, 17, 26, 0.1) 0px 16px 48px;
+    // padding: 0 0.5rem;
   }
 }
