build contact page

--- a/client/styles/NavBar.scss
+++ b/client/styles/NavBar.scss
@@ -83,7 +83,7 @@
     all: unset;
     // color: #ff5100;
     text-decoration-color: #ff5100;
-    @apply mx-4  underline;
+    @apply mx-4 underline underline-offset-4;
     // border-color: #ff7b00;
     // border-radius: 20px;
     // border-width: 1px;
