add content to faq & refund-cancellations

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -44,7 +44,7 @@ h2 {
   font-size: 3rem;
   margin-left: 1rem;
   font-weight: 350;
-  // @apply text-4xl font-semibold;
+  @apply text-center italic;
 }
 
 .row {
