--- a/client/styles/NavBar.scss
+++ b/client/styles/NavBar.scss
@@ -34,7 +34,7 @@
   box-shadow:
     rgba(50, 50, 93, 0.25) 5px 2px 0px -1px,
     rgba(0, 0, 0, 0.3) 3px 1px 0px -1px;
-  @apply flex justify-center py-10;
+  @apply mt-6 flex justify-center py-10;
 }
 
 .menu-container {
