--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -106,6 +106,18 @@ h2 {
   background: none !important;
 }
 
+// REVIEWS
+
+.reviews-container {
+  width: 80%;
+  margin: auto;
+}
+
+.reviews-iframe {
+  width: 100%;
+  height: 520px;
+}
+
 @media only screen and (max-width: 1350px) {
   .content-container {
     padding: 0 15%;
@@ -129,6 +141,12 @@ h2 {
   // GOOGLE MAP
 
   #location_gmap_canvas {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .reviews-container {
     width: 100%;
   }
 }
