--- a/client/styles/NavBar.scss
+++ b/client/styles/NavBar.scss
@@ -4,6 +4,7 @@
 }
 
 .nav-link {
+  align-self: center;
   @apply mx-4 transition duration-300 ease-in-out hover:scale-105 hover:opacity-85;
 }
 
@@ -12,18 +13,19 @@
 }
 
 .footer-link {
-  @apply mx-4 my-2;
+  @apply mx-4 my-2 ease-in-out hover:scale-105 hover:cursor-pointer hover:opacity-85;
 }
 
 .nav-bar {
   background-color: #ffffff;
-  z-index: 1;
+  z-index: 10;
   top: 0;
   // border-radius: 0 0 20px 0;
   box-shadow:
     rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   border-width: 1px;
+  max-width: 100vw;
   @apply fixed flex justify-between pb-2;
 }
 
@@ -55,10 +57,10 @@
     rgba(17, 17, 26, 0.1) 0px 1px 0px,
     rgba(17, 17, 26, 0.1) 0px 8px 24px,
     rgba(17, 17, 26, 0.1) 0px 16px 48px;
-  padding: 0 0.5rem;
+  padding: 0.25rem 0.75rem;
 }
 
-@media screen and (max-width: 690px) {
+@media screen and (max-width: 820px) {
   .header-logo {
     @apply w-1/3;
   }
@@ -74,6 +76,8 @@
 
   .nav-link {
     display: block;
+    align-self: normal;
+    @apply mr-0;
   }
 
   .accordian {
@@ -83,10 +87,14 @@
     @apply relative mt-2 text-right;
   }
 
-  .menu-btn {
+  .menu-btn-container {
     position: absolute;
-    top: 10px;
+    top: -1px;
     right: 10px;
+    display: flex;
+  }
+  .menu-btn {
+    align-self: center;
   }
 
   .accordian.open {
@@ -94,19 +102,8 @@
   }
 
   .nav-book-now {
-    all: unset;
-    // color: #ff5100;
-    text-decoration-color: #ff5100;
-    @apply mx-4 underline underline-offset-4;
-    // border-color: #ff7b00;
-    // border-radius: 20px;
-    // border-width: 1px;
-    // background-color: #ff5e00;
-    // color: #fff;
-    // box-shadow:
-    //   rgba(17, 17, 26, 0.1) 0px 1px 0px,
-    //   rgba(17, 17, 26, 0.1) 0px 8px 24px,
-    //   rgba(17, 17, 26, 0.1) 0px 16px 48px;
-    // padding: 0 0.5rem;
+    padding: 0.2rem;
+    margin-right: -18px;
+    @apply text-center;
   }
 }
