--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -27,6 +27,11 @@ h2 {
   @apply text-center text-3xl font-bold;
 }
 
+.break-line {
+  border-color: var(--primary);
+  @apply mt-4 rounded-xl border;
+}
+
 .active-link {
   @apply underline;
 }
@@ -52,6 +57,7 @@ h2 {
 .row {
   display: flex;
   margin: 0 1em 0 1em;
+  @apply pt-4;
 }
 .column {
   flex: 50%;
@@ -157,6 +163,9 @@ h2 {
 @media only screen and (max-width: 725px) {
   h2 {
     margin-top: 1em;
+  }
+  .break-line {
+    margin-top: 2em;
   }
 
   .row {
