--- a/client/styles/NavBar.scss
+++ b/client/styles/NavBar.scss
@@ -3,6 +3,11 @@
   @apply w-1/5 self-start;
 }
 
+.footer-logo {
+  height: auto;
+  @apply block w-3/4 object-contain;
+}
+
 .nav-link {
   align-self: center;
   @apply mx-4 transition duration-300 ease-in-out hover:scale-105 hover:opacity-85;
