--- a/client/styles/Booking.scss
+++ b/client/styles/Booking.scss
@@ -26,6 +26,17 @@
 
 @media only screen and (max-width: 1023px) {
   .booking-embed {
-    margin: 0;
+    margin: 0 5%;
+  }
+}
+
+@media only screen and (max-width: 860px) {
+  .booking-embed {
+    margin: 0 2%;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .booking-embed {
+    margin: 0 1%;
   }
 }
