--- a/client/styles/Mailchimp.scss
+++ b/client/styles/Mailchimp.scss
@@ -119,13 +119,18 @@ button + button {
 
 @media only screen and (max-width: 1023px) {
   .signup-form {
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 725px) {
   .input-container {
     margin-left: 0;
     margin-right: 0;
+  }
+
+  .signup-form {
+    margin-left: 2%;
+    margin-right: 2%;
   }
 }
