--- a/client/styles/NavBar.scss
+++ b/client/styles/NavBar.scss
@@ -31,6 +31,7 @@
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   border-width: 1px;
   max-width: 100vw;
+  width: 100vw;
   @apply fixed flex justify-between pb-2;
 }
 
@@ -110,5 +111,11 @@
     padding: 0.2rem;
     margin-right: -18px;
     @apply text-center;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .header-logo {
+    @apply w-5/12;
   }
 }
