--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -10,6 +10,7 @@
 
 .nav-link {
   align-self: center;
+  color: black;
   @apply mx-4 transition duration-300 ease-in-out hover:scale-105 hover:opacity-85;
 }
 
