--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -140,6 +140,12 @@ h2 {
   background: none !important;
 }
 
+#home_gmap_canvas {
+  width: 80%;
+  height: 500px;
+  margin: 2rem auto;
+}
+
 // REVIEWS
 
 .reviews-container {
@@ -151,6 +157,11 @@ h2 {
 .reviews-iframe {
   width: 100%;
   height: 520px;
+}
+
+//  OTHER
+.remove-top-margin {
+  margin-top: 0;
 }
 
 @media only screen and (max-width: 1350px) {
@@ -177,6 +188,11 @@ h2 {
 
   #location_gmap_canvas {
     width: 100%;
+  }
+
+  #home_gmap_canvas {
+    width: 90%;
+    height: 400px;
   }
 }
 
@@ -223,6 +239,8 @@ h2 {
   }
 }
 
-// @media screen and (max-width: 690px) {
-
-// }
+@media screen and (max-width: 600px) {
+  #home_gmap_canvas {
+    width: 94%;
+  }
+}
