--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
   --primary: #1f4c3c;
   --secondary: #251f4c;
   --tertiary: #4c1f2f;
+  --reviews-bg: #ebdee24f;
   --nav-height: 41px;
 }
 
@@ -29,6 +30,10 @@ p {
 }
 h2 {
   margin-top: 1.5rem;
+}
+
+.reviews-bg {
+  background-color: var(--reviews-bg);
 }
 
 .book-now-btn {
