--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -88,6 +88,12 @@
   padding: 0.25rem 0.75rem;
 }
 
+@media (min-width: 820px) {
+  .menu-btn-container {
+    display: none !important;
+  }
+}
+
 @media screen and (max-width: 820px) {
   .header-logo {
     @apply w-1/3;
