--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -88,6 +88,22 @@
   padding: 0.25rem 0.75rem;
 }
 
+.book-now-footer {
+  border-radius: 20px;
+  border-width: 1px;
+  border-color: #ff7b00;
+  background-color: #ff5e00;
+  color: #fff;
+  box-shadow:
+    rgba(17, 17, 26, 0.1) 0px 1px 0px,
+    rgba(17, 17, 26, 0.1) 0px 8px 24px,
+    rgba(17, 17, 26, 0.1) 0px 16px 48px;
+  padding: 0.15rem 0.85rem;
+  display: block;
+  max-width: 150px;
+  @apply text-center;
+}
+
 @media (min-width: 820px) {
   .menu-btn-container {
     display: none !important;
